--- a/index.html
+++ b/index.html
@@ -234,9 +234,14 @@
     <!-- E : Swiper banner -->
 
     <!-- S : Map API : 조재희수정 -->
-    <div class="container-fluid mapWrap py-5">
+    <div class="container-fluid mapWrap pt-5">
       <!-- <div class="container mapAll"> -->
       <div id="map"></div>
+      <div class="btnMap">
+        <p>지도 확대/축소</p>
+        <button onclick="setZoomable(true)">켜기</button>
+        <button onclick="setZoomable(false)">끄기</button>
+      </div>
       <div class="textWrap">
         <h3><span>쿠팡이츠</span> 가맹점 찾기</h3>
       </div>
