--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <!-- E : Card type2 -->
 
     <!-- S: visual : 신창훈 -->
-    <div class="container-fluid hunWrap hunVisulWrap visualbgimage">
+    <div class="container-fluid hunVisulWrap visualbgimage">
       <div class="visual">
         <h2>Better Eats<br />Better Life</h2>
         <p><a href="#"> 브랜드 스토리 보러가기 > </a></p>
