--- a/index.html
+++ b/index.html
@@ -84,21 +84,21 @@
       <div class="Swiper Swiper1">
         <div class="swiper-wrapper">
           <div class="swiper-slide imageWrap img01">
-            <div class="texttWrap">
+            <div class="container">
               <h2>매 주문 무료배달 <br />3/26부터 순차 OPEN</h2>
               <p>이제 배달비 걱정 없이 주문하세요!</p>
               <button class="btn">앱 다운로드</button>
             </div>
           </div>
           <div class="swiper-slide imageWrap img02">
-            <div class="texttWrap">
+            <div class="container">
               <h2>매 주문 무료배달 <br />3/26부터 순차 OPEN</h2>
               <p>이제 배달비 걱정 없이 주문하세요!</p>
               <button class="btn">앱 다운로드</button>
             </div>
           </div>
           <div class="swiper-slide imageWrap img03">
-            <div class="texttWrap">
+            <div class="container">
               <h2>매 주문 무료배달 <br />3/26부터 순차 OPEN</h2>
               <p>이제 배달비 걱정 없이 주문하세요!</p>
               <button class="btn">앱 다운로드</button>
